# SME-Back-Office

./: PRODUCT.md  README.md
sme-backoffice-copilot/backend/: Dockerfile  Makefile  alembic.ini  pyproject.toml  watch_errors.py
sme-backoffice-copilot/backend/alembic/: README.md  env.py  script.py.mako
sme-backoffice-copilot/backend/alembic/versions/: 20260630_0001_initial_schema.py  20260711_0002_workflow_jobs_outbox.py
sme-backoffice-copilot/backend/app/: __init__.py  config.py  db.py  dev_reset.py  dev_seed.py  main.py
sme-backoffice-copilot/backend/app/api/: dependencies.py  exception_handlers.py  responses.py
sme-backoffice-copilot/backend/app/classification/: __init__.py  hybrid.py  rules.py
sme-backoffice-copilot/backend/app/core/: auth.py  config.py  db.py  middleware.py  tenant.py
sme-backoffice-copilot/backend/app/evaluations/: __init__.py  datasets.py  runner.py  scorers.py
sme-backoffice-copilot/backend/app/extraction/: __init__.py  invoice_text_parser.py
sme-backoffice-copilot/backend/app/fixtures/: __init__.py  loader.py
sme-backoffice-copilot/backend/app/insights/: __init__.py  aggregates.py  generator.py
sme-backoffice-copilot/backend/app/jobs/: __init__.py  celery.py  celery_routing.py  contracts.py  factory.py  in_process.py
sme-backoffice-copilot/backend/app/models/: __init__.py  accounting.py  banking.py  base.py  document.py  invoice.py  jobs.py  operations.py  organization.py  user.py  workflow.py
sme-backoffice-copilot/backend/app/observability/: __init__.py  logging_filter.py  metrics.py  tracing.py
sme-backoffice-copilot/backend/app/providers/: __init__.py  azure_di.py  base.py  errors.py  factory.py  image_preprocessing.py  llm.py  local_ocr.py  mock.py  ocr.py  ollama.py  openai.py  privacy.py  prompts.py  rate_limit.py  routing.py  structured_output.py
sme-backoffice-copilot/backend/app/reconciliation/: __init__.py  deterministic.py
sme-backoffice-copilot/backend/app/repositories/: __init__.py  banking.py  base.py  documents.py  invoices.py  jobs.py  review_tasks.py  workflows.py
sme-backoffice-copilot/backend/app/review/: __init__.py  contracts.py  versioning.py
sme-backoffice-copilot/backend/tests/: README.md  conftest.py  test_api_foundation.py  test_database_foundation.py  test_health.py
(+184 files in other folders)
