[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sme-backoffice-copilot-api"
version = "0.1.0"
description = "Backend foundation for the SME Back-Office Copilot"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13,<2",
  "asyncpg>=0.29,<1",
  "azure-identity>=1.19,<2",
  "azure-storage-blob>=12.24,<13",
  "celery[redis]>=5.4,<6",
  "fastapi>=0.115,<1",
  "langgraph>=0.2,<2",
  "pydantic-settings>=2.6,<3",
  "sqlalchemy[asyncio]>=2.0,<3",
  "uvicorn[standard]>=0.32,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1",
  "mypy>=1.13,<2",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<1",
  "ruff>=0.8,<1",
]
local-ocr = [
  "opencv-python-headless>=4.9,<5",
]


[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "unit: fast isolated tests that do not cross process or service boundaries",
  "integration: tests that exercise API/application boundaries",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
